--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </svg>
 </a>
 <section class="content">
-<iframe sandbox="allow-scripts allow-same-origin" scrolling="no"  frameborder="0" src="https://szhong.4399.com/4399swf//upload_swf/ftp36/liuxinyu/20210810/jjjj3/index.html" style="border-radius: 1%; height: 720px; width: 1080px"></iframe>
+<iframe sandbox="allow-scripts allow-same-origin" scrolling="no"  frameborder="0" src="https://szhong.4399.com/4399swf//upload_swf/ftp36/liuxinyu/20210810/jjjj3/index.html" </iframe>
 </section>
 <div class="ad skyscraper1">
 <ins class="adsbygoogle" data-ad-client="ca-pub-3818483896982139" data-ad-slot="2386379804" data-page-url="https://unblockedgameszone.blogspot.com/"></ins>
